--- a/index.html
+++ b/index.html
@@ -3,20 +3,25 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <!-- TODO: Set the document title to the name of your application -->
+
     <title>Black Bell Productions</title>
     <meta name="description" content="Custom production company" />
-    <meta name="author" content="Lovable" />
+    <meta name="author" content="Black Bell Productions" />
 
-    <!-- TODO: Update og:title to match your application name -->
+    <!-- ✅ FAVICON (Browser Tab Logo) -->
+    <link rel="icon" type="image/png" href="/logo.png" />
+
+    <!-- Open Graph (for sharing links) -->
     <meta property="og:title" content="Black Bell Productions" />
     <meta property="og:description" content="Custom production company" />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://images.unsplash.com/photo-1586374579358-9d19d632b6df?q=80&w=687&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" />
+    <meta property="og:image" content="/logo.png" />
 
+    <!-- Twitter Card -->
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="website" />
-    <meta name="twitter:image" content="https://images.unsplash.com/photo-1586374579358-9d19d632b6df?q=80&w=687&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" />
+    <meta name="twitter:title" content="Black Bell Productions" />
+    <meta name="twitter:description" content="Custom production company" />
+    <meta name="twitter:image" content="/logo.png" />
   </head>
 
   <body>
